# ejdb

./: .astylerc  .clang-tidy  .editorconfig  .flake8  .gdbinit  .gitignore  .gitmodules  .ignore  .lvimrc  .npmignore  ANDROID.md  Autark  BASE.md  CAPI.md  CMakeLists.txt  CNAME  Changelog  Dockerfile  INSTALL  LICENSE  Makefile  README  README.md  WINDOWS.md  analysis_options.yaml  binding.gyp  build.sh  compile_commands.json  ctest.cmake  ejdb.project  ejdb.workspace  ejdb2.project  ejdb2.workspace  hints.txt  index.html  installRemote.sh  ios-tc.cmake  musl-linux-x86-64-tc.cmake  news.html  objects.inv  (+10 more)
bindings/dart/: CMakeLists.txt
bindings/dart/lib/: ejdb2_dart.c
jejdb/: Makefile  Makefile.in  README.md  build.properties  build.xml  configure  configure.ac
jejdb/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
jejdb/samples/sample1/: build.properties  build.xml
jejdb/src/cpp/: jejdb.c  jejdb.h  org_ejdb_driver_EJDB.h  org_ejdb_driver_EJDBCollection.h  org_ejdb_driver_EJDBCollection_Index.h  org_ejdb_driver_EJDBCollection_IndexType.h  org_ejdb_driver_EJDBCollection_Options.h  org_ejdb_driver_EJDBDriver.h  org_ejdb_driver_EJDBQuery.h  org_ejdb_driver_EJDBQuery_QResult.h  org_ejdb_driver_EJDBResultSet.h
luaejdb/: Makefile  Makefile.in  README.md  bson.lua  config.ld  configure  configure.ac  ejdb.lua  ejdb.luadoc  ll.lua  luabson.c  luabson.h  luaejdb-1.0-1.rockspec  luaejdb-1.0-2.rockspec  luaejdb-1.0.1-1.rockspec  luaejdb-1.0.1-5.rockspec  luaejdb-1.0.2-1.rockspec  luaejdb-1.0.3-1.rockspec  luaejdb-1.0.4-0.rockspec  luaejdb-1.0.4-1.rockspec  luaejdb-1.0.5-1.rockspec  luaejdb.c  luaejdb.rockspec  luaejdb.rockspec.in  middleclass.lua
luaejdb/debian/: changelog  control  copyright  lua51-ejdb.lintian-overrides  rules.mk
luaejdb/doc/: index.html
luaejdb/ejdb/: inspect.lua
luaejdb/nbproject/: configurations.xml  project.xml
luaejdb/samples/: sample1.lua
luaejdb/test/: Makefile  t1.lua
luaejdb/tools/: libpath.lua
luaejdb/tools/ldoc/: config.ld  ldoc.lua  readme.md
src/: Autark  CMakeLists.txt  ejdb2.c  ejdb2.h  ejdb2.h.in  ejdb2_internal.h  ejdb2cfg.h.in  ejdb2defs.h  jb.c  jb.h  jb_exec_idx_select.c  jb_full_scanner.c  jb_idx_array_scanner.c  jb_idx_dup_scanner.c  jb_idx_selection.c  jb_idx_uniq_scanner.c  jb_idx_util.c  jb_scan_consumer.c  jb_scan_sorter_consumer.c  jbdefs.h  jbserver.c  libejdb.pc.in  libejdb2.pc.in  myconf.h.in
src/bindings/: Autark
src/bindings/archived/: README.md
src/bindings/dart/: CMakeLists.txt  Changelog
src/bindings/ejdb2_android/: .gitignore  CMakeLists.txt  README.md  local.properties
src/bindings/ejdb2_dart/: .gitignore  .packages  CHANGELOG.md  CMakeLists.txt  Changelog  LICENSE  README.md  analysis_options.yaml  hints.txt  pubspec.yaml  pubspec.yaml.in  version.txt
src/bindings/ejdb2_flutter/: .gitignore  (+6 more)
src/bson/: bson.c  bson.h  encoding.c  nxjson.c  nxjson.h
src/ejdb/: ejdb.c  ejdb.h  ejdb_private.h  ejdbutl.c
src/examples/: CMakeLists.txt  example1.c
src/jbi/: Autark  jbi_consumer.c  jbi_dup_scanner.c  jbi_full_scanner.c  jbi_pk_scanner.c  jbi_selection.c  jbi_sorter_consumer.c  jbi_uniq_scanner.c  jbi_util.c  sort_r.h
src/jbj/: binn.h  hints.txt  jbj.c  jbj.h
src/jbl/: binn.c  binn.h  jbl.c  jbl.h  jbl_internal.h  jbl_json.c  jbldom.c  jbldom.h  jbljson.c  nxjson.c  nxjson.h
src/jblob/: binn.c  binn.h  hints.txt  jbl.c  jbl.h  jbl_internal.h  jbldom.c  jbldom.h  nxjson.c  nxjson.h
src/jbr/: Autark  CMakeLists.txt  README.md  jbr.c  jbr.h  jbr_old.c  jbr_old.txt
src/jbs/: Autark  CMakeLists.txt  README.md  jbs.c
src/jq/: hints.txt  jq.c  jq.h  jqp.c  jqp.h  jqp.peg  proposals.md
src/jql/: Autark  README.md  calc.peg  hints.txt  jql.c  jql.h  jql_internal.h  jqp.c  jqp.h  jqp.leg  jqp.peg  jqpx.c  proposals.md
src/samples/: CMakeLists.txt
src/tcbdb/: tcbdb.c  tcbdb.h
src/tcfdb/: tcfdb.c  tcfdb.h
src/tchdb/: tchdb.c  tchdb.h
src/tctdb/: tctdb.c  tctdb.h
src/tcutil/: md5.h  platform.c  tcutil.c  tcutil.h  utf8proc.c
src/tests/: Autark  CMakeLists.txt  ejdb_test.h  ejdb_test1.c  ejdb_test2.c  ejdb_test3.c  ejdb_test4.c  ejdb_test5.c  package.json
src/tmpl/: ejdb2cfg.h  libejdb2.pc.in
src/util/: convert.h  khash.h  lwre.c  lwre.h  pthread_barrier.c  pthread_barrier.h  sort_r.h  utf8proc.c  utf8proc.h
tcejdb/: .gitignore  CMakeLists.txt  CTestConfig.cmake  ChangeLog  Changelog  Makefile.in  README  README.txt  WIN32.md  basedefs.h  bson.c  bson.h  chacu.h  chartables.c  chartables.h  config.guess  config.sub  configure  configure.ac  configure.in  ctest.cmake  ejdb.c  ejdb.h  ejdb_private.h  ejdbutl.c  ejdbutl.h  encoding.h  md5.c  myconf.c  myconf.h  numbers.c  nxjson.c  platform.c  stringutils.c  stringutils.h  tcadb.c  tcadb.h  tcamgr.c  tcamttest.c  tcatest.c  (+35 more)
tcejdb/bros/: Makefile  bdbtest.c  cdbtest.c  cmpsqltctest.c  gdbmtest.c  mapreporter  maptest.cc  ndbmtest.c  qdbmtest.c  reporter  result.xls  sdbmtest.c  sqltest.c  tctest.c  tdbtest.c
tcejdb/debian/: changelog  changelog.in  control  copyright  hints  libtcejdb9-dev.install  libtcejdb9-dev.lintian-overrides  libtcejdb9.symbols  rules  rules.mk
tcejdb/doc/: spex-en.html  spex-ja.html
tcejdb/installer/: CMakeLists.txt
tcejdb/lab/: datechange  diffcheck  magic  widthcheck
tcejdb/man/: tcadb.3  tcamgr.1  tcamttest.1  tcatest.1  tcbdb.3  tcbmgr.1  tcbmttest.1  tcbtest.1  tcfdb.3  tcfmgr.1  tcfmttest.1  tcftest.1  tchdb.3  tchmgr.1  tchmttest.1  tchtest.1  tctdb.3  tctmgr.1  tctmttest.1  tcttest.1  tcucodec.1  tcumttest.1  tcutest.1  tcutil.3  tcxstr.3  tokyocabinet.3
tcejdb/mxe/: mxe-build.sh
tcejdb/nbproject/: Package-Default.bash  configurations.xml  project.xml
tcejdb/nix/: platform.c  platform.h
tcejdb/src/: CMakeLists.txt  Makefile  basedefs.h.in  cmake_install.cmake  libejdb.pc.in  myconf.h.in
tcejdb/testejdb/: Makefile  Makefile.in  t1.c  t2.c  t3.c  t4.c
tcejdb/win32/: platform.c  platform.h
(+767 files in other folders)
